--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Board</title>
     <script>
-      const theme = window.matchMedia("(prefers-color-scheme: dark)").matches
-        ? "dark"
-        : "light"
-
-      document.documentElement.classList.toggle("dark", theme === "dark")
+      let theme = JSON.parse(localStorage.getItem("THEME"))
+      if (theme === "system") {
+        theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+      }
+      document.documentElement.classList.toggle('dark', theme === 'dark');
     </script>
   </head>
   <body class="dark:bg-slate-950 bg:white text-slate-900 dark:text-slate-100">
